--- a/_pages/landing.html
+++ b/_pages/landing.html
@@ -1,130 +1,9 @@
 ---
 layout: default
 permalink: /
-title: Vibby
-description: Vibby empowers viewers to share the best moments of any video, while protecting the rights of intellectual property owners.
+title: Curius.tv
+description: Curius.tv is just that.
 ---
-<div class="landing">
-  <section class="hero landing-page z-shadow">
-    <div class="container">
-      <div class="hero-headings">
-        <h1 class="block__title">Empower Your Viewers to Amplify Your Content</h1>
-        <h3 class="block__description">
-          We believe everyone should have the power to capture and share the moments that matter from any video.<br>
-        </h3>
-        <a href="#demo" class="cta__primary--big z-shadow-1">
-          <span>Get a demo</span>
-        </a>
-      </div>
-      <div class="explainer-video">
-        <div class="browser-top"><img src="https://s3-eu-west-1.amazonaws.com/vibby-static/LandingPage/landing/app-bar-dark.png" alt="Browser window"/></div>
-        <video class="video-player z-shadow-6" id="video-player" poster="https://s3-eu-west-1.amazonaws.com/vibby-static/LandingPage/landing/vibby-how-it-works.png" loop>
-          <source src="https://s3-eu-west-1.amazonaws.com/vibby-static/LandingPage/landing/vibby-how-it-works.mp4" type="video/mp4">
-          <source src="https://s3-eu-west-1.amazonaws.com/vibby-static/LandingPage/landing/vibby-how-it-works.webm" type="video/webm">
-        </video>
-        <div class="absolute-container">
-          <a href="#try" class="cta__primary--big z-shadow-1">
-            <span>Try it yourself</span>
-          </a>
-        </div>
-      </div>
-      <div class="hero-svg">
-      </div>
-    </div>
-  </section>
-
-  <section class="value-props blue">
-    <div class="container">
-      <div class="value-prop">
-        <div class="value-prop-text">
-          <div class="visible-xs">
-            <img src="https://s3-eu-west-1.amazonaws.com/vibby-static/LandingPage/landing/value-prop-animation.png" alt="Value prop illustration"/>
-          </div>
-          <h1 id="ourTitle">Engage</h1>
-          <h3 id="ourDescription">Tap into the friendships of your audience by letting them personalize and share the best moments from your video content.
-          </h3>
-          <a href="/solutions" class="cta__primary--big z-shadow-1">
-            <span>Learn more</span>
-          </a>
-        </div>
-        <div class="value-prop-animation text-right">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="try-it violet z-shadow" id="try">
-    <div class="container">
-      <h2>Vibby in action</h2>
-      <h3>Vibbify your video player and take your content to the next level!</h3>
-      <video id="player-container-bc" data-video-id="5567553724001" 
-                                      data-account="5359769130001" 
-                                      data-player="default" 
-                                      data-embed="default" 
-                                      data-application-id 
-                                      class="video-js z-shadow-6" 
-                                      controls></video>
-                                          </div>
-  </section>
-
-  <section class="join-us" id="demo">
-    <div class="container">
-      <h2>Want to see how Vibby can unleash the potential of your video?</h2>
-      <h3 id="thank-you-msg">Thank you! A member of our team will be in touch with you soon.</h3>
-      <div class="nab-form z-shadow">
-        <h4>Enter your contact details</h4>
-        <form action="https://getsimpleform.com/messages?form_api_token=f629e6e913937453109cf5c58a3427c3" method="post">
-          <input type='hidden' name='redirect_to' value='https://vibby.com/#demo' />
-          <div class="form-field-group">
-            <input type='text' name='name' class="nab-form-input" required/>
-            <span class="bar"></span>
-            <label>Name</label>
-          </div>
-          <div class="form-field-group">
-            <input type='email' name='email' class="nab-form-input" required/>
-            <span class="bar"></span>
-            <label>Business email</label>
-          </div>
-          <div class="form-field-group">
-            <input type='text' name='business' class="nab-form-input" required/>
-            <span class="bar"></span>
-            <label>Company name</label>
-          </div>
-          <div class="form-field-group">
-            <input type='text' name='phone' class="nab-form-input" required/>
-            <span class="bar"></span>
-            <label>Phone number</label>
-          </div>
-          <div class="form-field-group">
-            <input type='text' name='address' class="nab-form-input" required/>
-            <span class="bar"></span>
-            <label>Company location</label>
-          </div>
-          <div class="form-field-group">
-            <textarea name='message' class="nab-form-input" required></textarea>
-            <span class="bar"></span>
-            <label>Few words about your business</label>
-          </div>
-          <input type='submit' value='Get a demo' class="cta__primary--big cta-create z-shadow-1" />
-        </form>
-      </div>
-    </div>
-  </section>
-
-    <!-- Our js -->
-    {% if jekyll.environment == 'production' %}
-      <script type="text/javascript" src="{{ "/assets/js/landing.js" | prepend: site.url }}"></script>
-    {% else %}
-      <script type="text/javascript" src="{{ "/assets/js/landing.js" | prepend: site.baseurl }}"></script>
-    {% endif %}
-      <script src="//players.brightcove.net/5359769130001/default_default/index.min.js"></script>
-      <script src="https://vibbify.vibby.com/static/vibbify_default.min.js"></script>
-      <script>
-        var bcPlayerApi = videojs('player-container-bc');
-        videojs('player-container-bc').ready(function(){
-          var myPlayer = this;
-          myPlayer.muted(true);
-        });
-      </script>
-
+<div>
+  This is curius.tv
 </div>
