sports page layout

--- a/_pages/landing.html
+++ b/_pages/landing.html
@@ -4,6 +4,19 @@ permalink: /
 title: Curius.tv
 description: Curius.tv is just that.
 ---
-<div>
-  This is curius.tv
-</div>
+<section class="landing">
+  <div class="container">
+    <div class="current-video" style="padding-bottom:130px;">
+      <iframe src="https://player.vimeo.com/video/242983965?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="430" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+    </div>
+    <div class="sidebar">
+      <h1>The final five game</h1>
+      <img src="assets/img/cola-ad.png" alt="ad">
+    </div>
+    <div class="other-videos">
+      <div class="other-videos-thumb">
+        
+      </div>
+    </div>
+  </div>
+</section>
