--- a/_pages/landing.html
+++ b/_pages/landing.html
@@ -1,22 +1,57 @@
 ---
 layout: default
 permalink: /
-title: Curius.tv
+title: Curius.tv - Sports 1
 description: Curius.tv is just that.
 ---
 <section class="landing">
   <div class="container">
-    <div class="current-video" style="padding-bottom:130px;">
-      <iframe src="https://player.vimeo.com/video/242983965?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="430" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+    <div class="video">
+      <iframe src="https://player.vimeo.com/video/26905480?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="562" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" class="z-shadow"></iframe>
     </div>
     <div class="sidebar">
-      <h1>The final five game</h1>
+      <h1>FIBA U20 Championship</h1>
       <img src="assets/img/cola-ad.png" alt="ad">
     </div>
     <div class="other-videos">
       <div class="other-videos-thumb">
-        
+        <a href="/sports-2">
+          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
+          <div class="svg-play">
+            {% include play-icon.svg %}
+          </div>
+          <h3>FAU @ Kansas NCAA</h3>
+        </a>
+      </div>
+      <div class="other-videos-thumb">
+        <a href="/sports-3">
+          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
+          <div class="svg-play">
+            {% include play-icon.svg %}
+          </div>
+          <h3>Title</h3>
+        </a>
+      </div>
+      <div class="other-videos-thumb">
+        <a href="/sports-4">
+          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
+          <div class="svg-play">
+            {% include play-icon.svg %}
+          </div>
+          <h3>Title</h3>
+        </a>
+      </div>
+      <div class="other-videos-thumb">
+        <a href="/sports-5">
+          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
+          <div class="svg-play">
+            {% include play-icon.svg %}
+          </div>
+          <h3>Title</h3>
+        </a>
       </div>
     </div>
   </div>
 </section>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script type="text/javascript" src="http://vibbify.vibby.com/static/vibbify_default.min.js"></script>
