--- a/_pages/sports-4.html
+++ b/_pages/sports-4.html
@@ -1,26 +1,35 @@
 ---
 layout: default
-permalink: /
-title: Curius.tv - Sports
+permalink: /sports-4
+title: Curius.tv - Sports 4
 description: Curius.tv is just that.
 ---
 <section class="landing">
   <div class="container">
     <div class="video">
-      <iframe src="https://player.vimeo.com/video/26905480?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="562" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" class="z-shadow"></iframe>
+      <iframe src="https://player.vimeo.com/video/63903261?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="562" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" class="z-shadow"></iframe>
     </div>
     <div class="sidebar">
-      <h1>FIBA U20 Championship</h1>
+      <h1>FAU @ Kansas NCAA</h1>
       <img src="assets/img/cola-ad.png" alt="ad">
     </div>
     <div class="other-videos">
+      <div class="other-videos-thumb z-shadow">
+        <a href="/">
+          <img src="https://i.vimeocdn.com/video/178141134_295x166.jpg">
+          <div class="svg-play">
+            {% include play-icon.svg %}
+          </div>
+          <h3>FIBA U20 Championship</h3>
+        </a>
+      </div>
       <div class="other-videos-thumb z-shadow">
         <a href="/sports-1">
           <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
           <div class="svg-play">
             {% include play-icon.svg %}
           </div>
-          <h3>FAU @ Kansas NCAA</h3>
+          <h3>Title</h3>
         </a>
       </div>
       <div class="other-videos-thumb z-shadow">
@@ -34,15 +43,6 @@ description: Curius.tv is just that.
       </div>
       <div class="other-videos-thumb z-shadow">
         <a href="/sports-3">
-          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
-          <div class="svg-play">
-            {% include play-icon.svg %}
-          </div>
-          <h3>Title</h3>
-        </a>
-      </div>
-      <div class="other-videos-thumb z-shadow">
-        <a href="/sports-4">
           <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
           <div class="svg-play">
             {% include play-icon.svg %}
