--- a/_pages/sports-4.html
+++ b/_pages/sports-4.html
@@ -7,7 +7,7 @@ description: Curius.tv is just that.
 <section class="landing">
   <div class="container">
     <div class="video">
-      <iframe src="https://player.vimeo.com/video/63903261?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="562" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" class="z-shadow"></iframe>
+      <iframe src="https://player.vimeo.com/video/63903261?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="562" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
     </div>
     <div class="sidebar">
       <h1>FAU @ Kansas NCAA</h1>
@@ -53,4 +53,4 @@ description: Curius.tv is just that.
     </div>
   </div>
 </section>
-<script type="text/javascript" src="http://vibbify.vibby.com/static/vibbify_default.min.js"></script>
+<script type="text/javascript" src="http://vibby-prod-vibbify.eu-west-1.elasticbeanstalk.com/static/vibbify_default.min.js"></script>
