--- a/_pages/comedy-4.html
+++ b/_pages/comedy-4.html
@@ -1,16 +1,16 @@
 ---
 layout: comedy
-permalink: /comedy-2
+permalink: /comedy-4
 title: Curius.tv - Comedy
 description: Curius.tv is just that.
 ---
 <section class="landing comedy">
   <div class="container">
     <div class="video">
-      <iframe src="https://player.vimeo.com/video/130619176?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="410" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" class="z-shadow"></iframe>
+      <iframe src="https://player.vimeo.com/video/25810978?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="410" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
     </div>
     <div class="sidebar">
-      <h1>Trevor Noah</h1>
+      <h1>Louie C.K.</h1>
       <img src="assets/img/cola-ad-sq.png" alt="ad">
     </div>
   </div>
@@ -37,21 +37,21 @@ description: Curius.tv is just that.
           </a>
         </div>
         <div class="other-videos-thumb z-shadow">
+          <a href="/comedy-2">
+            <img src="https://i.vimeocdn.com/video/522553279_295x166.jpg">
+            <div class="svg-play">
+              {% include play-icon.svg %}
+            </div>
+            <h3>Trevor Noah</h3>
+          </a>
+        </div>
+        <div class="other-videos-thumb z-shadow">
           <a href="/comedy-3">
             <img src="https://i.vimeocdn.com/video/325562929_295x166.jpg">
             <div class="svg-play">
               {% include play-icon.svg %}
             </div>
             <h3>George Carlin</h3>
-          </a>
-        </div>
-        <div class="other-videos-thumb z-shadow">
-          <a href="/comedy-4">
-            <img src="https://i.vimeocdn.com/video/170175806_295x166.jpg">
-            <div class="svg-play">
-              {% include play-icon.svg %}
-            </div>
-            <h3>Louie C.K.</h3>
           </a>
         </div>
       </div>
