--- a/_pages/sports-1.html
+++ b/_pages/sports-1.html
@@ -53,4 +53,4 @@ description: Curius.tv is just that.
     </div>
   </div>
 </section>
-<script type="text/javascript" src="http://vibby-prod-vibbify.eu-west-1.elasticbeanstalk.com/static/vibbify_default.js"></script>
+<script type="text/javascript" src="http://vibby-prod-vibbify.eu-west-1.elasticbeanstalk.com/static/vibbify_default.min.js"></script>
