--- a/_pages/comedy-2.html
+++ b/_pages/comedy-2.html
@@ -58,4 +58,4 @@ description: Curius.tv is just that.
     </div>
   </div>
 </section>
-<script type="text/javascript" src="http://vibby-prod-vibbify.eu-west-1.elasticbeanstalk.com/static/vibbify_default.min.js"></script>
+<script type="text/javascript" src="https://vibbify-prod.vibby.com/static/vibbify_default.min.js"></script>
