--- a/_pages/comedy-page.html
+++ b/_pages/comedy-page.html
@@ -51,7 +51,7 @@ description: Curius.tv is just that.
             <div class="svg-play">
               {% include play-icon.svg %}
             </div>
-            <h3>Louie C.K.</h3>
+            <h3>Louis C.K.</h3>
           </a>
         </div>
       </div>
