--- a/_pages/comedy-3.html
+++ b/_pages/comedy-3.html
@@ -7,7 +7,7 @@ description: Curius.tv is just that.
 <section class="landing comedy">
   <div class="container">
     <div class="video">
-      <iframe src="https://player.vimeo.com/video/46736152?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="562" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+      <iframe src="https://player.vimeo.com/video/46736152?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="492" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
     </div>
     <div class="sidebar">
       <h1>George Carlin</h1>
@@ -51,7 +51,7 @@ description: Curius.tv is just that.
             <div class="svg-play">
               {% include play-icon.svg %}
             </div>
-            <h3>Louie C.K.</h3>
+            <h3>Louis C.K.</h3>
           </a>
         </div>
       </div>
