--- a/_pages/comedy-4.html
+++ b/_pages/comedy-4.html
@@ -7,10 +7,10 @@ description: Curius.tv is just that.
 <section class="landing comedy">
   <div class="container">
     <div class="video">
-      <iframe src="https://player.vimeo.com/video/25810978?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="410" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+      <iframe src="https://player.vimeo.com/video/25810978?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="422" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
     </div>
     <div class="sidebar">
-      <h1>Louie C.K.</h1>
+      <h1>Louis C.K.</h1>
       <img src="assets/img/cola-ad-sq.png" alt="ad">
     </div>
   </div>
