--- a/_pages/sports-1.html
+++ b/_pages/sports-1.html
@@ -10,7 +10,7 @@ description: Curius.tv is just that.
       <iframe src="https://player.vimeo.com/video/63903261?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="562" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
     </div>
     <div class="sidebar">
-      <h1>FAU @ Kansas NCAA</h1>
+      <h1>College Basketball</h1>
       <img src="assets/img/cola-ad.png" alt="ad">
     </div>
     <div class="other-videos">
@@ -20,34 +20,34 @@ description: Curius.tv is just that.
           <div class="svg-play">
             {% include play-icon.svg %}
           </div>
-          <h3>FIBA U20 Championship</h3>
+          <h3>Basketball U20</h3>
         </a>
       </div>
       <div class="other-videos-thumb z-shadow">
         <a href="/sports-2">
-          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
+          <img src="https://i.vimeocdn.com/video/666393390_295x166.jpg">
           <div class="svg-play">
             {% include play-icon.svg %}
           </div>
-          <h3>Title</h3>
+          <h3>Snowboarding</h3>
         </a>
       </div>
       <div class="other-videos-thumb z-shadow">
         <a href="/sports-3">
-          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
+          <img src="https://i.vimeocdn.com/video/459691962_295x166.jpg">
           <div class="svg-play">
             {% include play-icon.svg %}
           </div>
-          <h3>Title</h3>
+          <h3>Soccer</h3>
         </a>
       </div>
       <div class="other-videos-thumb z-shadow">
         <a href="/sports-4">
-          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
+          <img src="https://i.vimeocdn.com/video/404227722_295x166.jpg">
           <div class="svg-play">
             {% include play-icon.svg %}
           </div>
-          <h3>Title</h3>
+          <h3>Football</h3>
         </a>
       </div>
     </div>
