--- a/_pages/sports-2.html
+++ b/_pages/sports-2.html
@@ -7,11 +7,11 @@ description: Curius.tv is just that.
 <section class="landing">
   <div class="container">
     <div class="video">
-      <iframe src="https://player.vimeo.com/video/63903261?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="562" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+      <iframe src="https://player.vimeo.com/video/241978642?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="422" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
     </div>
     <div class="sidebar">
-      <h1>FAU @ Kansas NCAA</h1>
-      <img src="assets/img/cola-ad.png" alt="ad">
+      <h1>Snowboarding</h1>
+      <img src="assets/img/cola-ad-sq.png" alt="ad">
     </div>
     <div class="other-videos">
       <div class="other-videos-thumb z-shadow">
@@ -20,7 +20,7 @@ description: Curius.tv is just that.
           <div class="svg-play">
             {% include play-icon.svg %}
           </div>
-          <h3>FIBA U20 Championship</h3>
+          <h3>Basketball U20</h3>
         </a>
       </div>
       <div class="other-videos-thumb z-shadow">
@@ -29,25 +29,25 @@ description: Curius.tv is just that.
           <div class="svg-play">
             {% include play-icon.svg %}
           </div>
-          <h3>Title</h3>
+          <h3>College Basketball</h3>
         </a>
       </div>
       <div class="other-videos-thumb z-shadow">
         <a href="/sports-3">
-          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
+          <img src="https://i.vimeocdn.com/video/459691962_295x166.jpg">
           <div class="svg-play">
             {% include play-icon.svg %}
           </div>
-          <h3>Title</h3>
+          <h3>Soccer</h3>
         </a>
       </div>
       <div class="other-videos-thumb z-shadow">
         <a href="/sports-4">
-          <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
+          <img src="https://i.vimeocdn.com/video/404227722_295x166.jpg">
           <div class="svg-play">
             {% include play-icon.svg %}
           </div>
-          <h3>Title</h3>
+          <h3>Football</h3>
         </a>
       </div>
     </div>
