--- a/_pages/comedy-page.html
+++ b/_pages/comedy-page.html
@@ -18,7 +18,7 @@ description: Curius.tv is just that.
     <div class="container">
       <h2>What to watch next</h2>
       <div>
-        <div class="other-videos-thumb z-shadow">
+        <div class="other-videos-thumb">
           <a href="/comedy-1">
             <img src="https://i.vimeocdn.com/video/541963161_295x166.jpg">
             <div class="svg-play">
@@ -27,7 +27,7 @@ description: Curius.tv is just that.
             <h3>Jimmy Kimmel Live</h3>
           </a>
         </div>
-        <div class="other-videos-thumb z-shadow">
+        <div class="other-videos-thumb">
           <a href="/comedy-2">
             <img src="https://i.vimeocdn.com/video/522553279_295x166.jpg">
             <div class="svg-play">
@@ -36,7 +36,7 @@ description: Curius.tv is just that.
             <h3>Trevor Noah</h3>
           </a>
         </div>
-        <div class="other-videos-thumb z-shadow">
+        <div class="other-videos-thumb">
           <a href="/comedy-3">
             <img src="https://i.vimeocdn.com/video/325562929_295x166.jpg">
             <div class="svg-play">
@@ -45,7 +45,7 @@ description: Curius.tv is just that.
             <h3>George Carlin</h3>
           </a>
         </div>
-        <div class="other-videos-thumb z-shadow">
+        <div class="other-videos-thumb">
           <a href="/comedy-4">
             <img src="https://i.vimeocdn.com/video/170175806_295x166.jpg">
             <div class="svg-play">
