--- a/_pages/sports-page.html
+++ b/_pages/sports-page.html
@@ -14,7 +14,7 @@ description: Curius.tv is just that.
       <img src="assets/img/cola-ad.png" alt="ad">
     </div>
     <div class="other-videos">
-      <div class="other-videos-thumb z-shadow">
+      <div class="other-videos-thumb">
         <a href="/sports-1">
           <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
           <div class="svg-play">
@@ -23,7 +23,7 @@ description: Curius.tv is just that.
           <h3>College Basketball</h3>
         </a>
       </div>
-      <div class="other-videos-thumb z-shadow">
+      <div class="other-videos-thumb">
         <a href="/sports-2">
           <img src="https://i.vimeocdn.com/video/666393390_295x166.jpg">
           <div class="svg-play">
@@ -32,7 +32,7 @@ description: Curius.tv is just that.
           <h3>Snowboarding</h3>
         </a>
       </div>
-      <div class="other-videos-thumb z-shadow">
+      <div class="other-videos-thumb">
         <a href="/sports-3">
           <img src="https://i.vimeocdn.com/video/459691962_295x166.jpg">
           <div class="svg-play">
@@ -41,7 +41,7 @@ description: Curius.tv is just that.
           <h3>Soccer</h3>
         </a>
       </div>
-      <div class="other-videos-thumb z-shadow">
+      <div class="other-videos-thumb">
         <a href="/sports-4">
           <img src="https://i.vimeocdn.com/video/404227722_295x166.jpg">
           <div class="svg-play">
