--- a/_pages/sports-2.html
+++ b/_pages/sports-2.html
@@ -6,8 +6,10 @@ description: Curius.tv is just that.
 ---
 <section class="landing">
   <div class="container">
-    <div class="video">
-      <iframe src="https://player.vimeo.com/video/241978642?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" width="100%" height="422" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+    <div class="video-wrapper">
+      <div class="video">
+        <iframe src="https://player.vimeo.com/video/241978642?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+      </div>
     </div>
     <div class="sidebar">
       <h1>Snowboarding</h1>
