updated gems, vimeo player working with vibbify as well

--- a/_pages/comedy-page.html
+++ b/_pages/comedy-page.html
@@ -6,7 +6,7 @@ description: Curius.tv is just that.
 ---
 <section class="landing comedy">
   <div class="container">
-    <div class="video-wrapper">
+    <div class="vids-wrapper">
       <div class="video">
         <iframe src="https://player.vimeo.com/video/83660584?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
       </div>
@@ -16,11 +16,11 @@ description: Curius.tv is just that.
       <img src="assets/img/cola-ad-sq.png" alt="ad">
     </div>
   </div>
-  <div class="other-videos">
+  <div class="other-vids">
     <div class="container">
       <h2>What to watch next</h2>
       <div>
-        <div class="other-videos-thumb">
+        <div class="other-vids-thumb">
           <a href="/comedy-1">
             <img src="https://i.vimeocdn.com/video/541963161_295x166.jpg">
             <div class="svg-play">
@@ -29,7 +29,7 @@ description: Curius.tv is just that.
             <h3>Jimmy Kimmel Live</h3>
           </a>
         </div>
-        <div class="other-videos-thumb">
+        <div class="other-vids-thumb">
           <a href="/comedy-2">
             <img src="https://i.vimeocdn.com/video/522553279_295x166.jpg">
             <div class="svg-play">
@@ -38,7 +38,7 @@ description: Curius.tv is just that.
             <h3>Trevor Noah</h3>
           </a>
         </div>
-        <div class="other-videos-thumb">
+        <div class="other-vids-thumb">
           <a href="/comedy-3">
             <img src="https://i.vimeocdn.com/video/325562929_295x166.jpg">
             <div class="svg-play">
@@ -47,7 +47,7 @@ description: Curius.tv is just that.
             <h3>George Carlin</h3>
           </a>
         </div>
-        <div class="other-videos-thumb">
+        <div class="other-vids-thumb">
           <a href="/comedy-4">
             <img src="https://i.vimeocdn.com/video/170175806_295x166.jpg">
             <div class="svg-play">
@@ -60,4 +60,4 @@ description: Curius.tv is just that.
     </div>
   </div>
 </section>
-<script type="text/javascript" src="https://vibbify-prod.vibby.com/static/vibbify_default.min.js"></script>
+<script type="text/javascript" src="https://vibbify-prod.vibby.com/static/vibbify_curius.min.js"></script>
