--- a/_pages/sports-page.html
+++ b/_pages/sports-page.html
@@ -6,7 +6,7 @@ description: Curius.tv is just that.
 ---
 <section class="landing">
   <div class="container">
-    <div class="video-wrapper">
+    <div class="vids-wrapper">
       <div class="video">
         <video id="player-container-bc" class="video-js bc-player" controls="controls" data-video-id="5723854126001" data-account="5359769130001" data-player="default" data-embed="default" data-application-id=""></video>
       </div>
@@ -15,8 +15,8 @@ description: Curius.tv is just that.
       <h1>Basketball U20</h1>
       <img src="assets/img/cola-ad.png" alt="ad">
     </div>
-    <div class="other-videos">
-      <div class="other-videos-thumb">
+    <div class="other-vids">
+      <div class="other-vids-thumb">
         <a href="/sports-1">
           <img src="https://i.vimeocdn.com/video/434389122_295x166.jpg">
           <div class="svg-play">
@@ -25,7 +25,7 @@ description: Curius.tv is just that.
           <h3>College Basketball</h3>
         </a>
       </div>
-      <div class="other-videos-thumb">
+      <div class="other-vids-thumb">
         <a href="/sports-2">
           <img src="https://i.vimeocdn.com/video/666393390_295x166.jpg">
           <div class="svg-play">
@@ -34,7 +34,7 @@ description: Curius.tv is just that.
           <h3>Snowboarding</h3>
         </a>
       </div>
-      <div class="other-videos-thumb">
+      <div class="other-vids-thumb">
         <a href="/sports-3">
           <img src="https://i.vimeocdn.com/video/459691962_295x166.jpg">
           <div class="svg-play">
@@ -43,7 +43,7 @@ description: Curius.tv is just that.
           <h3>Soccer</h3>
         </a>
       </div>
-      <div class="other-videos-thumb">
+      <div class="other-vids-thumb">
         <a href="/sports-4">
           <img src="https://i.vimeocdn.com/video/404227722_295x166.jpg">
           <div class="svg-play">
