--- a/_pages/sports-mlb.html
+++ b/_pages/sports-mlb.html
@@ -3256,8 +3256,8 @@ description: Curius.tv is just that.
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="//players.brightcove.net/5359769130001/default_default/index.min.js"></script>
 <!-- <script type="text/javascript" src="https://vibbify-prod.vibby.com/static/vibbify_curius.min.js"></script> -->
-<script src="http://3381965e.ngrok.io/static/vibbify_default.js"></script>
-<!-- <script src="http://localhost:8888/static/vibbify_default.js"></script> -->
+<!-- <script src="http://3381965e.ngrok.io/static/vibbify_default.js"></script> -->
+<script src="http://localhost:8888/static/vibbify_default.js"></script>
 <script>
 var bcPlayerApi = videojs('player-container-bc');
 var playBtn = document.getElementById("playBtn");
