--- a/_pages/corrigan.html
+++ b/_pages/corrigan.html
@@ -986,7 +986,7 @@ module.exports=extend;var hasOwnProperty=Object.prototype.hasOwnProperty;functio
 </style>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script type="text/javascript" src="https://vibbify-prod.vibby.com/static/vibbify_corrigansports.min.js"></script>
+<script type="text/javascript" src="http://localhost:8888/static/corriganSports.test.js"></script>
 <script src="//players.brightcove.net/5359769130001/default_default/index.min.js"></script>
 <script>
 var bcPlayerApi = videojs('player-container-bc');
