--- a/_pages/corrigan.html
+++ b/_pages/corrigan.html
@@ -989,7 +989,7 @@ module.exports=extend;var hasOwnProperty=Object.prototype.hasOwnProperty;functio
 <script type="text/javascript" src="http://localhost:8888/static/corriganSports.test.js"></script>
 <script src="//players.brightcove.net/5359769130001/default_default/index.min.js"></script>
 <script>
-var bcPlayerApi = videojs('performPlayer_html5_api');
+var bcPlayerApi = videojs('performPlayer');
 </script>
 </html>
 
