--- a/_pages/corrigan.html
+++ b/_pages/corrigan.html
@@ -613,7 +613,7 @@ module.exports=extend;var hasOwnProperty=Object.prototype.hasOwnProperty;functio
             background-color: transparent;
           }
         </style>
-        <video id="performPlayer_html5_api" class="video-js bc-player" controls="controls" data-video-id="5765981319001" data-account="3423279375001" data-player="9e28ec37-9bd6-4049-b1d4-183474fd27c7" data-embed="default" data-application-id="" autoplay></video>
+        <video id="performPlayer" class="video-js bc-player" controls="controls" data-video-id="5765981319001" data-account="3423279375001" data-player="9e28ec37-9bd6-4049-b1d4-183474fd27c7" data-embed="default" data-application-id="" autoplay></video>
 
         <meta itemprop="name" content="Loyola vs. St. Pauls">
         <link itemprop="thumbnailURL" content="https://brightcove.hs.llnwd.net/v2/unsecured/media/3423279375001/201804/443/3423279375001_5766004152001_5765981319001-vs.jpg?pubId=3423279375001&amp;videoId=5765981319001">
