displayed the missing brightcove player in the modal window

--- a/_pages/corrigan.html
+++ b/_pages/corrigan.html
@@ -608,6 +608,7 @@ module.exports=extend;var hasOwnProperty=Object.prototype.hasOwnProperty;functio
             height: 100% !important;
             width: 100% !important;
             background-color: transparent;
+            position: absolute;
           }
           .video-js .vjs-poster {
             background-color: transparent;
