--- a/_pages/corrigan.html
+++ b/_pages/corrigan.html
@@ -608,6 +608,8 @@ module.exports=extend;var hasOwnProperty=Object.prototype.hasOwnProperty;functio
             height: 100% !important;
             width: 100% !important;
             background-color: transparent;
+          }
+          vb-div .video-js {
             position: absolute;
           }
           .video-js .vjs-poster {
