--- a/_pages/corrigan.html
+++ b/_pages/corrigan.html
@@ -990,7 +990,7 @@ module.exports=extend;var hasOwnProperty=Object.prototype.hasOwnProperty;functio
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://localhost:8888/static/vibbify_default.min.js"></script>
-<script type="text/javascript" src="http://vibby-preprod-vibbify.eu-west-1.elasticbeanstalk.com/static/corriganSports/main.bundle.js"></script>
+<script type="text/javascript" src="http://vibby-preprod-vibbify.eu-west-1.elasticbeanstalk.com/static/vibbify_default.min.js"></script>
 <script src="//players.brightcove.net/5359769130001/default_default/index.min.js"></script>
 <script>
 var bcPlayerApi = videojs('performPlayer');
