--- a/_pages/corrigan-local.html
+++ b/_pages/corrigan-local.html
@@ -1,6 +1,6 @@
 ---
 layout: mockup
-permalink: /corrigan
+permalink: /corrigan-local
 title: Corrigan Sports testing
 description: Curius.tv is just that.
 ---
