--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -2,7 +2,7 @@
 layout: mockup
 permalink: /ted
 title: TED Conferences
-description: dfsd.
+description: Do Schools Kill Creativity?.
 ---
 <!DOCTYPE html>
 <!-- saved from url=(0067)https://www.ted.com/talks/ken_robinson_says_schools_kill_creativity -->
