--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -12990,8 +12990,8 @@ videoContainer.addEventListener('click', toogleVideo);
 
 
 </script>
-<script src="localhost:8888/static/TED/main.bundle.js"></script>
-<script src="localhost:8888/static/TED/vibbify_ted.js"></script>
+<script src="http://localhost:8888/static/TED/main.bundle.js"></script>
+<script src="http://localhost:8888/static/TED/vibbify_ted.js"></script>
 
 <script>
   (function () {
