--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -10344,7 +10344,7 @@ Search:
                                           <div class=" w:full d:n d:i-b@xxs c:white m-t:.4 ">Like</div>
                                         </button>
                                       </div>
-                                      <div class=" m-b:1 m-x:a t-a:c ">
+                                      <div id="testiranje2" class=" m-b:1 m-x:a t-a:c ">
                                         <button class=" c:white f:.9 sb ">
                                           <div class="
                             b-r:3
