quick design fix for vibbify ted

--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -10344,7 +10344,7 @@ Search:
                                           <div class=" w:full d:n d:i-b@xxs c:white m-t:.4 ">Like</div>
                                         </button>
                                       </div>
-                                      <div id="testiranje2" class=" m-b:1 m-x:a t-a:c ">
+                                      <div class=" m-b:1 m-x:a t-a:c ">
                                         <button class=" c:white f:.9 sb ">
                                           <div class="
                             b-r:3
@@ -10363,6 +10363,19 @@ Search:
     </g>
 </svg></span></div>
                                           <div class=" w:full d:n d:i-b@xxs c:white m-t:.4 ">Rate</div>
+                                        </button>
+                                      </div>
+                                      <div class=" m-b:1 m-x:a t-a:c ">
+                                        <button class=" c:white f:.9 sb ">
+                                          <div class="
+                            b-r:3
+                            d:i-b
+                            v-a:m
+                            w:6
+                            h:6
+                            t-a:c
+                           c:white bg:gray-dd.2"><span id="testiranje2" style="margin-top:5px; margin-left:1px" class="SVGInline  d:i-b o:v w:full h:full p:.5 t-a:c "><!--?xml version="1.0" encoding="UTF-8"?-->
+</span></div>
                                         </button>
                                       </div>
                                     </div>
