--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -13003,8 +13003,7 @@ videoContainer.addEventListener('click', toogleVideo);
 
 
 </script>
-<script src="http://localhost:8888/static/TED/main.bundle.js"></script>
-<script src="http://localhost:8888/static/TED/vibbify_ted.js"></script>
+<script src="http://vibby-preprod-vibbify.eu-west-1.elasticbeanstalk.com/static/TED/main.bundle.js"></script>
 
 <script>
   (function () {
