--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -12,6 +12,13 @@ description: Do Schools Kill Creativity?.
 <script async="" src="./Ken Robinson_ Do schools kill creativity_ _ TED Talk_files/tcn.js"></script>
 <script async="" src="./Ken Robinson_ Do schools kill creativity_ _ TED Talk_files/beacon.js"></script>
 <script async="" src="./Ken Robinson_ Do schools kill creativity_ _ TED Talk_files/analytics.js"></script>
+<style>
+  span#testiranje2:after {
+   content: “Highlight”;
+   position: relative;
+   top: 12px;
+  }
+</style>
 <script async="" type="text/javascript"
         src="./Ken Robinson_ Do schools kill creativity_ _ TED Talk_files/gpt.js"></script>
 <script>!function () {
