--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -14,7 +14,7 @@ description: Do Schools Kill Creativity?.
 <script async="" src="./Ken Robinson_ Do schools kill creativity_ _ TED Talk_files/analytics.js"></script>
 <style>
   span#testiranje2:after {
-   content: “Highlight”;
+   content: "Highlight";
    position: relative;
    top: 12px;
   }
