--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -16,7 +16,8 @@ description: Do Schools Kill Creativity?.
   span#testiranje2:after {
    content: "Highlight";
    position: relative;
-   top: 12px;
+   top: 14px;
+   left: -12px;
   }
 </style>
 <script async="" type="text/javascript"
