--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -13005,6 +13005,9 @@ var playButton = document.getElementById('initial-btn-play');
 var progressBarPlayButton = document.getElementById('progress-bar-control-video');
 var videoContainer = document.getElementById('main-video-container');
 videoContainer.addEventListener('click', toogleVideo);
+bcPlayerApi.on('play', function() {
+  bcPlayerApi.play();
+});
 
 
 </script>
