--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -13006,7 +13006,7 @@ var progressBarPlayButton = document.getElementById('progress-bar-control-video'
 var videoContainer = document.getElementById('main-video-container');
 videoContainer.addEventListener('click', toogleVideo);
 bcPlayerApi.on('play', function() {
-  bcPlayerApi.play();
+  playVideo();
 });
 
 
