turning off toggle video

--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -13004,7 +13004,7 @@ function pauseVideo() {
 var playButton = document.getElementById('initial-btn-play');
 var progressBarPlayButton = document.getElementById('progress-bar-control-video');
 var videoContainer = document.getElementById('main-video-container');
-videoContainer.addEventListener('click', toogleVideo);
+// videoContainer.addEventListener('click', toogleVideo);
 bcPlayerApi.on('play', function() {
   playVideo();
 });
