Style for vibbify btn

--- a/_pages/nbc.html
+++ b/_pages/nbc.html
@@ -17,9 +17,15 @@ description: Discover more from the Olympic Channel, including our TV online so 
   <style>
     #vibbify-btn {
       float: right;
-      margin-top: -25px;
+      margin-top: -35px;
       margin-right: 15px;
     }
+
+    svg {
+      width: 24px;
+      height: 24px;
+    }
+
   </style>
 
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Object.values"></script>
