--- a/_pages/americas-got-talent.html
+++ b/_pages/americas-got-talent.html
@@ -72,9 +72,9 @@ description: Watch America's Got Talent Highlight - Zurcaroh - Auditions - NBC.c
       margin-right: 15px;
     }
 
-    svg {
-      width: 44px;
-      height: 44px;
+    #vibbify-btn svg {
+      width: 24px;
+      height: 24px;
     }
 
   </style>
