--- a/_pages/nbc.html
+++ b/_pages/nbc.html
@@ -21,7 +21,7 @@ description: Discover more from the Olympic Channel, including our TV online so 
       margin-right: 15px;
     }
 
-    svg {
+    #vibbify-btn svg {
       width: 24px;
       height: 24px;
     }
