chaging preroll positioning

--- a/_pages/americas-got-talent.html
+++ b/_pages/americas-got-talent.html
@@ -77,6 +77,11 @@ description: Watch America's Got Talent Highlight - Zurcaroh - Auditions - NBC.c
       height: 24px;
     }
 
+    #video-player-container a {
+      position: relative !important;
+      top: 0 !important;
+    }
+
   </style>
 
   <script type="text/javascript">
