test with local build

--- a/_pages/nbc.html
+++ b/_pages/nbc.html
@@ -1316,7 +1316,8 @@ function pauseVideo() {
 
 <!--<script src="http://localhost:8888/static/NBC/main.bundle.js"></script>-->
 
-<script src="http://vibby-preprod-vibbify.eu-west-1.elasticbeanstalk.com/static/NBC/main.bundle.js"></script>
+<!-- <script src="http://vibby-preprod-vibbify.eu-west-1.elasticbeanstalk.com/static/NBC/main.bundle.js"></script> -->
+<script src="http://localhost:8888/static/NBC/main.bundle.js"></script>
 
 <script src="http://static.vilynx.com/gallery/vpg.4.7.4.min.js" publickey="21b1e9d4f3765e384991275b50351227"
         resizetoimage="true" redirect="true" taptoplay="true"
