--- a/_pages/ted.html
+++ b/_pages/ted.html
@@ -13032,8 +13032,7 @@ bcPlayerApi.on('timeupdate', function() {
 
 
 </script>
-<!-- <script src="http://vibby-preprod-vibbify.eu-west-1.elasticbeanstalk.com/static/TED/main.bundle.js"></script> -->
-<script src="http://localhost:8888/static/TED/main.bundle.js"></script>
+<script src="http://vibby-preprod-vibbify.eu-west-1.elasticbeanstalk.com/static/TED/main.bundle.js"></script>
 
 <script>
   (function () {
